<resources>
    <string name="app_name">MakeYourBody</string>

    <!--サインアップ画面で使用-->
    <string name="signup_logo">ユーザ登録ページのロゴ</string>
    <string name="signup_name_label">名前</string>
    <string name="signup_name_hint">名前入力</string>
    <string name="signup_login_name_label">ユーザ名</string>
    <string name="signup_login_name_hint">ユーザ名入力(半角英数)</string>
    <string name="signup_pass_label">パスワード</string>
    <string name="signup_pass_hint">パスワード名入力(半角英数)</string>
    <string name="signup_age_label">年齢</string>
    <string name="signup_gender_label">性別</string>
    <string name="signup_height_label">身長</string>
    <string name="signup_weight_label">体重</string>
    <string name="signup_attr_label">属性</string>
    <string name="signup_dialog_hint">ダイアログで選択</string>
    <string name="signup_btn_label">ユーザ登録ボタン</string>

    <!--サインアップ画面で使用するエラー文-->
    <string name="signup_name_error">名前を入力してください</string>
    <string name="signup_length_error">20文字以内で入力してください</string>
    <string name="signup_pass_length_error">8文字以内で入力してください</string>
    <string name="signup_login_name_error">ユーザ名を入力してください</string>
    <string name="signup_pass_error">パスワードを入力してください</string>

    <!--性別ラジオボタンで使用-->
    <string name="signup_gender_radio_female">女性</string>
    <string name="signup_gender_radio_male">男性</string>
    <string name="signup_gender_radio_other">その他</string>

    <!--属性選択で利用-->
    <string name="signup_attr_trainee">トレーニー</string>
    <string name="signup_attr_trainer">トレーナー</string>
    <string name="signup_attr_dual">兼任</string>

    <!--年齢ダイアログで使用-->
    <string name="age_picker_title">年齢を入力してください</string>
    <string name="height_picker_title">身長を入力してください</string>
    <string name="weight_picker_title">体重を入力してください</string>
    <string name="age_picker_ok">決定</string>
    <string name="age_picker_cancel">キャンセル</string>

    <!--ログイン画面で使用-->
    <string name="login_title">ー　ログインはこちら　ー</string>
    <string name="login_username">ユーザネーム</string>
    <string name="login_password">パスワード</string>
    <string name="login_btn_label">ログイン</string>
    <string name="login_signup_msg">ー　アカウントをお持ちではない場合　ー</string>
    <string name="login_signup_btn_label">ユーザを作成</string>
    <string name="login_error_msg">ユーザ名またはパスワードが異なります</string>

    <!--トップページでの使用-->
    <string name="top_schedule_btn_label">スケジュール確認</string>
    <string name="top_menu_btn_label">メニュー作成</string>
    <string name="top_make_exercise_btn_label">種目作成</string>
    <string name="top_logout_btn_label">ログアウト</string>

    <!--メニュー作成画面-->
    <string name="menu_date">セッション日</string>
    <string name="menu_trainee">対象者</string>
    <string name="menu_date_btn">日付選択</string>
    <string name="menu_content">トレーニング選択</string>
    <string name="menu_target_user">対象ユーザ</string>
    <string name="menu_target_user_hint">山田太郎</string>
    <string name="menu_content_detail">選択したトレーニング</string>
    <string name="menu_save_btn_label">メニュー保存</string>

    <!--種目選択ポップアップで利用-->
    <string name="item_list_back_button_label">種目リストを閉じる</string>

    <!--種目マスタ作成画面-->
    <string name="exercise_name">種目名</string>
    <string name="exercise_content">種目内容</string>
    <string name="exercise_name_hint">種目の名前を入力してください</string>
    <string name="exercise_content_hint">種目の内容を入力してください</string>
    <string name="exercise_input_button_label">登録</string>

    <!--スケジュール確認画面で利用-->
    <string name="schedule_date_label">表示したいセッション日</string>
    <string name="schedule_list_target_label">対象ユーザ：</string>
    <string name="schedule_details_btn_label">詳細</string>
    <string name="schedule_list_label">スケジュール検索結果</string>
    <string name="schedule_date_clear_button_label">条件クリア</string>
    <string name="schedule_date_hint">条件入力</string>

    <!--メニュー詳細画面で利用-->
    <string name="menu_training_label">トレーニングメニュー</string>
    <string name="menu_edit_btn_label">編集する</string>
    <string name="menu_edit_save_label">保存する</string>
    <string name="menu_training_btn_label">種目選択</string>

    <!--種目詳細画面での利用-->
    <string name="exercise_details_name_label">エクササイズ種目名</string>
    <string name="exercise_details_content_label">エクササイズ種目詳細</string>
    <string name="exercise_details_content_save">内容を保存</string>

    <!--ダイアログで利用-->
    <string name="dialog_yes">はい</string>
    <string name="dialog_no">いいえ</string>
    <string name="dialog_title_logout">ログアウトしますか？</string>


</resources>