<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--女性ボタン-->
    <Button
        android:id="@+id/gender_female"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gender_select"
        android:text="@string/signup_gender_radio_female"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/gender_male"
        app:layout_constraintTop_toTopOf="parent" />

    <!--男性ボタン-->
    <Button
        android:id="@+id/gender_male"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gender_select"
        android:text="@string/signup_gender_radio_male"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/gender_female"
        app:layout_constraintRight_toLeftOf="@id/gender_other"
        app:layout_constraintTop_toTopOf="parent" />

    <!--その他ボタン-->
    <Button
        android:id="@+id/gender_other"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gender_select"
        android:text="@string/signup_gender_radio_other"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/gender_male"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

