<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--トレーニーボタン-->
    <Button
        android:id="@+id/attr_trainee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gender_select"
        android:text="@string/signup_attr_trainee"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/attr_trainer"
        app:layout_constraintTop_toTopOf="parent" />

    <!--トレーナーボタン-->
    <Button
        android:id="@+id/attr_trainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gender_select"
        android:text="@string/signup_attr_trainer"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/attr_trainee"
        app:layout_constraintRight_toLeftOf="@id/attr_dual"
        app:layout_constraintTop_toTopOf="parent" />

    <!--兼任ボタン-->
    <Button
        android:id="@+id/attr_dual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gender_select"
        android:text="@string/signup_attr_dual"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/attr_trainer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

